tests/basic/check/assert/020.pan.out
tests/basic/check/assert/020.pan:4:1-4: error: cannot solve constraints of f20
tests/basic/check/assert/020.pan:7:1-4: error: cannot solve constraints of f21
tests/basic/check/assert/020.pan:10:1-4: error: cannot solve constraints of f22